plugins {
    id "application"
    id "org.openjfx.javafxplugin" version "0.1.0"
}

group = "app.musicplayer"
version = "3.2.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = "app.musicplayer.MusicPlayerLauncher"
    applicationDefaultJvmArgs = [
            "--enable-native-access=ALL-UNNAMED",
            "--enable-native-access=javafx.graphics",
            "--enable-native-access=javafx.media"
    ]
}

javafx {
    version = "25.0.1"
    modules = ["javafx.controls", "javafx.media"]
}

dependencies {
    implementation "org.xerial:sqlite-jdbc:3.50.3.0"
    implementation "org.jsoup:jsoup:1.18.3"

    testImplementation platform("org.junit:junit-bom:5.13.4")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs "--enable-native-access=ALL-UNNAMED"
}
